# 3dfs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  benchmark_loading.py  pyproject.toml  setup.sh  test_gcode_analysis.py  test_importer_manager.py
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_update.yml  feature_request.yml
.github/workflows/: ci.yml  package.yml
appimage/: AppRun  three-dfs.desktop.in  three-dfs.icon.b64
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  DEVELOPMENT.md  architecture.md  coding-standards.md  customizer-backends.md  customizer-transformations.md  customizer_backends.md  customizer_transformations.md  development.md  extending.md  getting-started.md  index.md  manual-testing.md  manual_testing.md  overview.md  packaging.md  packaging_requirements.md  user-guide.md
docs/examples/openscad/: README.md  demo_parametric_bracket.scad  emboss_utility.scad  make_runners.scad
packaging/deb/: control.in  three-dfs.desktop  three-dfs.sh
packaging/flatpak/: io.open3dfs.ThreeDFS.desktop  io.open3dfs.ThreeDFS.json.in  three-dfs.sh
packaging/macos/: requirements.txt
scripts/: build.sh  build_appimage.py  build_deb_package.py  build_flatpak.py  build_macos_bundle.py  build_windows_bundle.py  build_windows_dist.py  create_tables.py  migrate_container_metadata.py  reset_assets_db.py  three_dfs_entry.py
src/three_dfs/: __init__.py  __main__.py  app.py  assembly.py  config.py  container.py  container_metadata.py  importer.py  paths.py  project.py  search.py
src/three_dfs/api_importers/: __init__.py  api_base.py  base.py  thingiverse.py  thingiverse_web_api.py
src/three_dfs/application/: __init__.py  assembly_scanner.py  asset_manager.py  bulk_import_manager.py  container_manager.py  container_scanner.py  library_manager.py  main_window.py  menu_manager.py  project_scanner.py  settings.py  ui_manager.py  undo_manager.py
src/three_dfs/customizer/: __init__.py  openscad.py  pipeline.py  status.py  transformations.py
src/three_dfs/data/: __init__.py  tags.py
src/three_dfs/db/: __init__.py  models.py
src/three_dfs/gcode/: __init__.py  preview.py
src/three_dfs/import_plugins/: __init__.py  thingiverse_plugin.py
src/three_dfs/importers/: __init__.py  base.py  myminifactory.py  thingiverse.py  thingiverse_web_api.py
src/three_dfs/storage/: __init__.py  container_service.py  database.py  metadata.py  repository.py  service.py
src/three_dfs/thumbnails/: __init__.py
src/three_dfs/ui/: __init__.py  assembly_pane.py  bulk_import_dialog.py  container_metadata_dialog.py  container_pane.py  customizer_dialog.py  customizer_panel.py  delegates.py  linked_import_dialog.py  machine_tag_dialog.py  model_viewer.py  preview_pane.py  project_pane.py  repository_browser.py  settings_dialog.py  tag_graph.py  tag_sidebar.py  url_dialog.py  version_manager_dialog.py  widgets.py
src/three_dfs/utils/: __init__.py  paths.py  undo.py
tests/: conftest.py  test_assembly_arrangements.py  test_config.py  test_container_helpers.py  test_container_metadata.py  test_container_metadata_dialog.py  test_gcode_machine_tags.py  test_gcode_previews.py  test_importer.py  test_package.py  test_project_arrangements.py  test_project_scanner.py  test_readme_detection.py  test_search.py  test_tags.py  test_thumbnails.py  test_ui_assembly_pane.py  test_ui_project_pane.py  test_undo.py
tests/application/: test_container_links.py  test_container_scanner.py
tests/customizer/: test_customizer_frontend.py  test_openscad_backend.py  test_pipeline.py  test_status.py  test_transformations.py
tests/customizer/data/: example.scad
tests/db/: test_models.py
tests/fixtures/: sample_block.step  sample_mesh.stl  sample_toolpath.gcode
tests/import_plugins/: test_plugins.py  test_registry.py  test_thingiverse_plugin.py
tests/storage/: test_database.py  test_repository.py
tests/ui/: test_preview_renderers.py
tests/unit/: test_bulk_import.py  test_gcode_analysis.py  test_gcode_regex.py  test_gui.py  test_importer_manager.py
